--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         }
     </style>
     <canvas>
-
+       <div>test the github repo name change</div> 
     </canvas>
     <script src="index.js"></script>
 </body>
